# Mory

./: .gitignore  CMakeLists.txt
example/SimpleWindow/: CMakeLists.txt  main.cpp
include/Mory/: Mory.h  UserInterface.h
src/: Mory.cpp  UserInterface.cpp
